--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,14 @@
     width: 100vw;
     height: 100vh;
     background-color: #e8e4e4;
-     overflow: hidden;
+     /* overflow: hidden; */
   position: relative;
 }
 
 .button-div {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-between !important;
   padding: 30px !important;
   background-color: #fff;
 }
@@ -45,13 +45,47 @@
     border-radius: 10px !important;
     color: #fff !important;
 }
-
+.save-dash {
+  background-color: green !important;
+    width: 100px !important;
+    height: 40px !important;
+    border-radius: 10px !important;
+    color: #fff !important;
+}
+.save-flow {
+  background-color: green !important;
+    width: 130px !important;
+    height: 60px !important;
+    border-radius: 10px !important;
+    color: #fff !important;
+}
+.editor{
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 400;
+  background: #fff;
+  border-left: 1px solid #ccc;
+  /* padding: 30 !important; */
+  z-index: 9999;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+}
 
 @media (max-width: 768px) {
     .button-div {
         flex-wrap: wrap;
     }
 
+}
+
+.react-flow__handle {
+  pointer-events: auto;
+  z-index: 10;
 }
 
 /* .content {
@@ -63,15 +97,62 @@
 
 .content {
    
- box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-     border-radius: 20px !important;
+ box-shadow: 0  0 8px 3px rgb(165, 165, 199);
+     border-radius: 10px !important;
      background-color: #fff;
+     width: 150px;
+     min-height: 140px;
+     border: 1px solid rgb(234, 228, 228);
 
 }
+.dotted-line {
+  border-top: 1px dotted #ccc;
+  width: 100%;
+  height: 1px;
+}
+.footer p{
+  font-size: 6px;
+}
+
 .default-heading{
-  font-size: 8px;
+  font-size: 9px;
   font-weight: 500;
 }
+.delay-box,
+.reply-box {
+  
+  text-align: left;
+   border: 1px solid #ccc;
+  width: 100% !important;
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 8px;
+  /* margin-bottom: 2px; */
+}
+
+.delay-box {
+  background-color: ghostwhite;
+}
+
+.reply-box {
+  background-color: #f9f9f9;
+  color: black;
+}
+.reply-box img{
+  /* width: 100%; */
+  height: 100px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+.reply-box video{
+  height: 100px;
+  width: auto;
+  max-width: 180px;
+  border-radius: 4px;
+  display: block;
+}
+
+
 .offcanvas-body::-webkit-scrollbar {
   display: none;
 }
@@ -128,11 +209,15 @@ input{
   appearance: none;          
   
 }
+input[type="range"] {
+  padding: 0;
+}
 
  .offcanvas-save{
-width: 170px !important;
+width: 100px !important;
 background-color: green !important;
 color: #fff !important;
+height: 40px !important;
 }
 .text-save{
 width: 100px !important;
@@ -148,3 +233,10 @@ color: #fff !important;
   border: 1px solid aqua;
 }
 
+
+
+.node-highlighted {
+  box-shadow: 0 0 8px 3px green;
+  border-radius: 8px;
+  transition: box-shadow 0.3s ease;
+}
