--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,95 @@
     }
 
 }
+.custom-checkbox-sm .form-check-input {
+    width: 0.8rem !important; /* Smaller checkbox size */
+    height: 0.8rem !important;
+    margin-top: 0.25em; /* Adjust vertical alignment */
+}
+
+.custom-checkbox-sm .form-check-label {
+    font-size: 0.9rem; /* Smaller label font size */
+}
+
+/* .condition-editor-offcanvas .offcanvas-header {
+    border-bottom: 1px solid #dee2e6;
+} */
+
+/* .condition-editor-offcanvas .offcanvas-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+} */
+
+/* .field-section {
+    /* background-color: #f8f9fa;
+    border: 1px solid #e9ecef;
+    border-radius: 0.25rem; */
+ */
+
+/* .field-section h5 {
+    color: #343a40;
+} */
+
+.add-icon,
+.remove-icon {
+    cursor: pointer;
+    font-size: 1.2rem;
+}
+.add-icon{
+  color: green;
+}
+
+.remove-icon {
+    color: #dc3545; /* Danger red color */
+}
+
+.add-icon:hover {
+    color: #0056b3;
+}
+
+.remove-icon:hover {
+    color: #c82333;
+}
+
+/* Header Labels for Fields */
+.header-labels .form-label {
+    font-weight: bold;
+    font-size: 0.9rem;
+    color: #555;
+    margin-bottom: 0.5rem;
+}
+
+/* Custom styles for smaller form controls and dropdown toggles */
+.custom-dropdown-toggle-sm.dropdown-toggle {
+    /* Hide the default caret arrow */
+    &::after {
+        display: none ;
+    }
+    font-size: 0.85rem; /* Smaller font size for dropdown toggle text */
+    padding: 0.25rem 0.5rem; /* Smaller padding */
+    height: auto; /* Allow height to adjust to content */
+    min-height: calc(1.5em + 0.5rem + 2px); /* Minimum height for consistency */
+}
+
+.form-control-sm-custom {
+    font-size: 0.85rem; /* Smaller font size for input */
+    padding: 0.25rem 0.5rem; /* Smaller padding */
+    height: auto; /* Allow height to adjust */
+    min-height: calc(1.5em + 0.5rem + 2px); /* Minimum height for consistency */
+width: 7rem !important;
+  }
+
+
+.offcanvas-save {
+    background-color: #28a745; /* Green for Save button */
+    border-color: #28a745;
+    color: white;
+}
+
+.offcanvas-save:hover {
+    background-color: #218838;
+    border-color: #1e7e34;
+}
 
 .react-flow__handle {
   pointer-events: auto;
